--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -1464,11 +1464,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "batch_size = 128\n",
+    "hidden_layer_size1 = 1024\n",
+    "hidden_layer_size2 = 100\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "\n",
+    "  # Input data. For the training data, we use a placeholder that will be fed\n",
+    "  # at run time with a training minibatch.\n",
+    "  tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                    shape=(batch_size, image_size * image_size))\n",
+    "  tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+    "  tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "  tf_test_dataset = tf.constant(test_dataset)\n",
+    "  global_step = tf.Variable(0)\n",
+    "  beta_regul = tf.placeholder(tf.float32)\n",
+    "    \n",
+    "  #hidden layer\n",
+    "  # Variables.\n",
+    "  weights_hidden = tf.Variable(\n",
+    "    tf.truncated_normal(\n",
+    "            [image_size * image_size, hidden_layer_size1],\n",
+    "            stddev=np.sqrt(2.0/(image_size * image_size))\n",
+    "   ))\n",
+    "  biases_hidden = tf.Variable(tf.zeros([hidden_layer_size1]))\n",
+    "  hidden = tf.nn.dropout(tf.nn.relu(tf.matmul(tf_train_dataset, weights_hidden) + biases_hidden),0.5)\n",
+    "    \n",
+    "  weights_hidden2 = tf.Variable(\n",
+    "    tf.truncated_normal(\n",
+    "        [hidden_layer_size1, hidden_layer_size2],\n",
+    "        stddev=np.sqrt(2.0/hidden_layer_size1)))\n",
+    "  biases_hidden2 = tf.Variable(tf.zeros([hidden_layer_size2]))\n",
+    "  hidden2 = tf.nn.dropout(tf.nn.relu(tf.matmul(hidden, weights_hidden2) + biases_hidden2),0.5)\n",
+    "\n",
+    "  #output layer\n",
+    "  weights = tf.Variable(\n",
+    "    tf.truncated_normal(\n",
+    "        [hidden_layer_size2, num_labels],\n",
+    "        stddev=np.sqrt(2.0/hidden_layer_size2)))\n",
+    "  biases = tf.Variable(tf.zeros([num_labels]))\n",
+    "\n",
+    "  # Training computation.\n",
+    "  logits = tf.matmul(hidden2, weights) + biases\n",
+    "  loss = tf.reduce_mean(\n",
+    "    tf.nn.softmax_cross_entropy_with_logits(logits, tf_train_labels))\n",
+    "  \n",
+    "  # Optimizer.\n",
+    "  learning_rate = tf.train.exponential_decay(0.5, global_step, 1000, 0.65, staircase=True) \n",
+    "  optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss,global_step=global_step)\n",
+    "  \n",
+    "  # Predictions for the training, validation, and test data.\n",
+    "  train_prediction = tf.nn.softmax(logits)\n",
+    "\n",
+    "  hidden_prediction1 = tf.nn.relu(tf.matmul(tf_valid_dataset, weights_hidden) + biases_hidden)\n",
+    "  hidden_prediction2 = tf.nn.relu(tf.matmul(hidden_prediction1, weights_hidden2) + biases_hidden2)\n",
+    "  valid_prediction = tf.nn.softmax(\n",
+    "    tf.matmul(hidden_prediction2, weights) + biases)\n",
+    "\n",
+    "  test_hidden = tf.nn.relu(tf.matmul(tf_test_dataset, weights_hidden) + biases_hidden)\n",
+    "  test_hidden2 = tf.nn.relu(tf.matmul(test_hidden, weights_hidden2) + biases_hidden2)\n",
+    "  test_prediction = tf.nn.softmax(tf.matmul(test_hidden2, weights) + biases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0: 2.496976\n",
+      "Minibatch accuracy: 11.7%\n",
+      "Validation accuracy: 35.1%\n",
+      "Minibatch loss at step 500: 0.503348\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 85.2%\n",
+      "Minibatch loss at step 1000: 0.676845\n",
+      "Minibatch accuracy: 78.1%\n",
+      "Validation accuracy: 85.8%\n",
+      "Minibatch loss at step 1500: 0.463278\n",
+      "Minibatch accuracy: 85.2%\n",
+      "Validation accuracy: 86.8%\n",
+      "Minibatch loss at step 2000: 0.729234\n",
+      "Minibatch accuracy: 77.3%\n",
+      "Validation accuracy: 87.0%\n",
+      "Minibatch loss at step 2500: 0.471173\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 87.8%\n",
+      "Minibatch loss at step 3000: 0.398270\n",
+      "Minibatch accuracy: 85.9%\n",
+      "Validation accuracy: 87.9%\n",
+      "Minibatch loss at step 3500: 0.363838\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 88.1%\n",
+      "Minibatch loss at step 4000: 0.734971\n",
+      "Minibatch accuracy: 77.3%\n",
+      "Validation accuracy: 88.5%\n",
+      "Minibatch loss at step 4500: 0.425397\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Validation accuracy: 88.3%\n",
+      "Minibatch loss at step 5000: 0.480199\n",
+      "Minibatch accuracy: 82.8%\n",
+      "Validation accuracy: 88.4%\n",
+      "Minibatch loss at step 5500: 0.604408\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 88.5%\n",
+      "Minibatch loss at step 6000: 0.492280\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 88.7%\n",
+      "Minibatch loss at step 6500: 0.253300\n",
+      "Minibatch accuracy: 93.8%\n",
+      "Validation accuracy: 88.8%\n",
+      "Minibatch loss at step 7000: 0.370646\n",
+      "Minibatch accuracy: 88.3%\n",
+      "Validation accuracy: 88.9%\n",
+      "Minibatch loss at step 7500: 0.468298\n",
+      "Minibatch accuracy: 85.9%\n",
+      "Validation accuracy: 88.8%\n",
+      "Minibatch loss at step 8000: 0.269938\n",
+      "Minibatch accuracy: 92.2%\n",
+      "Validation accuracy: 88.8%\n",
+      "Minibatch loss at step 8500: 0.444274\n",
+      "Minibatch accuracy: 83.6%\n",
+      "Validation accuracy: 88.9%\n",
+      "Minibatch loss at step 9000: 0.419783\n",
+      "Minibatch accuracy: 85.9%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 9500: 0.338887\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 10000: 0.309964\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 10500: 0.445671\n",
+      "Minibatch accuracy: 84.4%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 11000: 0.257457\n",
+      "Minibatch accuracy: 91.4%\n",
+      "Validation accuracy: 89.1%\n",
+      "Minibatch loss at step 11500: 0.343823\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 12000: 0.320342\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 12500: 0.333435\n",
+      "Minibatch accuracy: 88.3%\n",
+      "Validation accuracy: 89.1%\n",
+      "Minibatch loss at step 13000: 0.282505\n",
+      "Minibatch accuracy: 92.2%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 13500: 0.433622\n",
+      "Minibatch accuracy: 84.4%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 14000: 0.424094\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 14500: 0.338886\n",
+      "Minibatch accuracy: 91.4%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 15000: 0.456146\n",
+      "Minibatch accuracy: 85.2%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 15500: 0.411806\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 16000: 0.510525\n",
+      "Minibatch accuracy: 82.0%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 16500: 0.344928\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 17000: 0.368253\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 17500: 0.580523\n",
+      "Minibatch accuracy: 84.4%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 18000: 0.522700\n",
+      "Minibatch accuracy: 82.8%\n",
+      "Validation accuracy: 89.0%\n",
+      "Test accuracy: 94.3%\n"
+     ]
+    }
+   ],
    "source": [
     "num_steps = 18001\n",
     "\n",
