--- a/5_word2vec.ipynb
+++ b/5_word2vec.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -330,30 +330,14 @@
      "output_type": "stream",
      "text": [
       "data: ['anarchism', 'originated', 'as', 'a', 'term', 'of', 'abuse', 'first']\n",
-      "['the']\n",
-      "['the', 'of']\n",
-      "['the']\n",
-      "['the', 'UNK']\n",
-      "['the']\n",
-      "['the', 'of']\n",
-      "['the']\n",
-      "['the', 'UNK']\n",
       "\n",
       "with num_skips = 2 and skip_window = 1:\n",
       "    batch: ['originated', 'originated', 'as', 'as', 'a', 'a', 'term', 'term']\n",
-      "    labels: ['as', 'anarchism', 'originated', 'a', 'term', 'as', 'a', 'of']\n",
-      "['of']\n",
-      "['of', 'the']\n",
-      "['of', 'the', 'UNK']\n",
-      "['of', 'the', 'UNK', 'and']\n",
-      "['of']\n",
-      "['of', 'and']\n",
-      "['of', 'and', 'one']\n",
-      "['of', 'and', 'one', 'UNK']\n",
+      "    labels: ['anarchism', 'as', 'originated', 'a', 'as', 'term', 'a', 'of']\n",
       "\n",
       "with num_skips = 4 and skip_window = 2:\n",
       "    batch: ['as', 'as', 'as', 'as', 'a', 'a', 'a', 'a']\n",
-      "    labels: ['originated', 'anarchism', 'a', 'term', 'term', 'of', 'originated', 'as']\n"
+      "    labels: ['originated', 'a', 'term', 'anarchism', 'as', 'originated', 'of', 'term']\n"
      ]
     }
    ],
@@ -380,7 +364,6 @@
     "    for j in range(num_skips):\n",
     "      while target in targets_to_avoid:\n",
     "        target = random.randint(0, span - 1)\n",
-    "      print([reverse_dictionary[bi] for bi in targets_to_avoid])\n",
     "      targets_to_avoid.append(target)\n",
     "      batch[i * num_skips + j] = buffer[skip_window]\n",
     "      labels[i * num_skips + j, 0] = buffer[target]\n",
